--- a/app/views/chat.ejs
+++ b/app/views/chat.ejs
@@ -106,16 +106,15 @@
 	<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
 		<div class="container">
 			<div class="panel-body campo-mensagem">
-				<form>
-					<div class="col-md-12">
-						<div class="input-group">
-							<input type="text" class="form-control" placeholder="Mensagem">
-							<span class="input-group-btn">
-								<button class="btn btn-default" type="button">></button>
-							</span>
-						</div>
+				<div class="col-md-12">
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="Mensagem" id="mensagem">
+						<input type="hidden" value="<%=dadosForm.apelido%>" id="apelido" />
+						<span class="input-group-btn">
+							<button class="btn btn-default" type="button" id="enviar_mensagem">></button>
+						</span>
 					</div>
-				</form>
+				</div>
 			</div>
 		</div>
 	</nav>
@@ -127,6 +126,13 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script>
 		var socket = io('http://localhost:8080');
+
+		$('#enviar_mensagem').click(function () {
+			socket.emit(
+				'msgParaServidor',
+				{ apelido: $('#apelido').val(), mensagem: $('#mensagem').val() }
+			);
+		});
 
 		socket.on('msgParaCliente', function (data) {
 			var html = '';
