--- a/app/views/chat.ejs
+++ b/app/views/chat.ejs
@@ -82,21 +82,7 @@
 
 		<div class="row participantes" id="participantes" style="display:none">
 			<div class="col-md-1"></div>
-			<div class="col-md-10">
-				<span class="participante">
-					<img src="images/ico_usuario.png" />
-					Jorge
-				</span>
-
-				<span class="participante">
-					<img src="images/ico_usuario.png" />
-					José
-				</span>
-
-				<span class="participante">
-					<img src="images/ico_usuario.png" />
-					Fernando
-				</span>
+			<div class="col-md-10" id="pessoas">
 			</div>
 			<div class="col-md-1"></div>
 
@@ -110,6 +96,7 @@
 					<div class="input-group">
 						<input type="text" class="form-control" placeholder="Mensagem" id="mensagem">
 						<input type="hidden" value="<%=dadosForm.apelido%>" id="apelido" />
+						<input type="hidden" value="0" id="apelido_atualizado_nos_clientes" />
 						<span class="input-group-btn">
 							<button class="btn btn-default" type="button" id="enviar_mensagem">></button>
 						</span>
@@ -130,9 +117,16 @@
 		$('#enviar_mensagem').click(function () {
 			socket.emit(
 				'msgParaServidor',
-				{ apelido: $('#apelido').val(), mensagem: $('#mensagem').val() }
+				{
+					apelido: $('#apelido').val(),
+					mensagem: $('#mensagem').val(),
+					apelido_atualizado_nos_clientes: $('#apelido_atualizado_nos_clientes').val()
+				}
 			);
+			$('#mensagem').val("");
+			$('#apelido_atualizado_nos_clientes').val(1);
 		});
+
 
 		socket.on('msgParaCliente', function (data) {
 			var html = '';
@@ -140,7 +134,20 @@
 			html += '<h4>' + data.apelido + '</h4>';
 			html += '<p>' + data.mensagem + '</p>';
 			html += '</div>';
+
 			$('#dialogos').append(html);
+
+			window.scrollTo(0, document.body.scrollHeight);
+		});
+
+		socket.on('participantesParaCliente', function (data) {
+			var html = '';
+			html += '<span class="participantes">';
+			html += '<img src="images/ico_usuario.png">'
+			html += data.apelido;
+			html += '</span>';
+
+			$('#pessoas').append(html);
 		});
 
 	</script>
